# archivos_mnlpp

./: 3 Practica_ARIMA_FRED.ipynb  CNN_Multivariable.ipynb  README.md  clase_7.ipynb  main.py  multi_index.xlsx  nba_ffnn.ipynb  nba_ffnn_vHTML.html  prac_ffnn.ipynb  prac_lstm.ipynb  practica_27.ipynb  practica_garch.ipynb  practica_platts_sofia_maldonado.html  practica_platts_sofia_maldonado.ipynb  practica_sarimax.ipynb  pyproject.toml  sarima_mlb.ipynb  tarea_arima.ipynb  tarea_arima_SofiaMaldonado.html  total_energies_garch.ipynb  warriors_data.csv
data/: tsa.xlsx  us_construction_2011_2024.csv
